--- a/app/src/main/res/layout/activity_flash.xml
+++ b/app/src/main/res/layout/activity_flash.xml
@@ -87,26 +87,39 @@
         android:layout_height="match_parent"
         app:cardElevation="@dimen/app_bar_elevation"
         app:cardCornerRadius="25sp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
         android:layout_margin="10sp"
         android:layout_below="@+id/ll"
         android:id="@+id/card">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0sp"
+                android:layout_weight="1"
                 android:layout_gravity="center"
                 android:src="@drawable/flashlight"
                 android:padding="15sp"
                 android:onClick="onClick"
                 android:id="@+id/flashlight"
-                android:background="#00000000"/>
+                android:background="@color/colorBlackShade"/>
 
-        </ScrollView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0sp"
+                android:layout_weight="1"
+                android:padding="10sp"
+                android:fontFamily="sans-serif-smallcaps"
+                android:text="Click The Button To Turn ON/OFF The Flash"
+                android:textSize="20sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:gravity="center"/>
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
