--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryLight">#B2EBF2</color>
+    <color name="colorPrimaryLightLight">#E1F5FE</color>
     <color name="colorPrimaryDark">#0083BF</color>
     <color name="colorAccent">#FF3D00</color>
     <color name="colorPrimaryDifferent">#FF3D00</color>
