--- a/app/src/main/res/layout-land/activity_camera.xml
+++ b/app/src/main/res/layout-land/activity_camera.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_camera"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appbusters.robinkamboj.senseitall.view.CameraActivity">
+    tools:context="com.appbusters.robinkamboj.senseitall.view.robin.CameraActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
