--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".view.CompassActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".view.rishabh.CompassActivity">
 
     <ImageView
         android:id="@+id/main_image_dial"
