--- a/app/src/main/res/layout/activity_radio.xml
+++ b/app/src/main/res/layout/activity_radio.xml
@@ -90,19 +90,35 @@
         android:layout_margin="10sp"
         android:layout_below="@+id/ll">
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center">
 
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:gravity="center"
+                android:textSize="25sp"
+                android:textColor="@color/colorPrimary"
+                android:text="Radio Version:"
+                android:id="@+id/one"
+                android:fontFamily="sans-serif-smallcaps"
+                android:padding="3sp"/>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="30sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="Value"
+                android:layout_below="@+id/one"
+                android:id="@+id/radio_version"
+                android:fontFamily="casual"
+                android:padding="3sp"/>
 
-            </LinearLayout>
-
-        </ScrollView>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
