--- a/app/src/main/res/layout/activity_vibrator.xml
+++ b/app/src/main/res/layout/activity_vibrator.xml
@@ -82,73 +82,71 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="@dimen/app_bar_elevation"
-        app:cardCornerRadius="5sp"
-        android:layout_margin="10sp"
-        android:clickable="true"
-        android:onClick="onClick"
-        android:layout_below="@+id/ll"
-        android:id="@+id/card">
+        android:layout_margin="5sp"
+        android:layout_below="@+id/ll">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/card_background">
+        <android.support.v7.widget.CardView
+            android:layout_column="1"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            app:cardElevation="@dimen/app_bar_elevation"
+            app:cardCornerRadius="5sp"
+            android:layout_margin="5sp"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:id="@+id/card">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0sp"
-                android:layout_weight="1">
+        </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Click"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="35sp"
-                    android:gravity="center"
-                    android:fontFamily="sans-serif-smallcaps"/>
+        <android.support.v7.widget.CardView
+            android:layout_column="2"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            app:cardElevation="@dimen/app_bar_elevation"
+            app:cardCornerRadius="5sp"
+            android:layout_margin="5sp"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:id="@+id/car2">
 
-            </FrameLayout>
+        </android.support.v7.widget.CardView>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0sp"
-                android:layout_weight="1">
+        <android.support.v7.widget.CardView
+            android:layout_column="1"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            app:cardElevation="@dimen/app_bar_elevation"
+            app:cardCornerRadius="5sp"
+            android:layout_margin="5sp"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:id="@+id/card3">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="To"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="35sp"
-                    android:gravity="center"
-                    android:fontFamily="sans-serif-smallcaps"/>
+        </android.support.v7.widget.CardView>
 
-            </FrameLayout>
+        <android.support.v7.widget.CardView
+            android:layout_column="2"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            app:cardElevation="@dimen/app_bar_elevation"
+            app:cardCornerRadius="5sp"
+            android:layout_margin="5sp"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:id="@+id/car4">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0sp"
-                android:layout_weight="1">
+        </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Vibrate"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="35sp"
-                    android:gravity="center"
-                    android:fontFamily="sans-serif-smallcaps"/>
+    </GridLayout>
 
-            </FrameLayout>
 
-        </LinearLayout>
 
-    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
