--- a/app/src/main/res/layout/activity_vibrator.xml
+++ b/app/src/main/res/layout/activity_vibrator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_camera"
+    android:id="@+id/activity_vibrate"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -124,7 +124,7 @@
             android:layout_margin="5sp"
             android:clickable="true"
             android:onClick="onClick"
-            android:id="@+id/car2">
+            android:id="@+id/card2">
 
             <TextView
                 android:layout_width="match_parent"
@@ -176,7 +176,7 @@
             android:layout_margin="5sp"
             android:clickable="true"
             android:onClick="onClick"
-            android:id="@+id/car4">
+            android:id="@+id/card4">
 
             <TextView
                 android:layout_width="match_parent"
