--- a/app/src/main/res/layout/activity_gsm.xml
+++ b/app/src/main/res/layout/activity_gsm.xml
@@ -98,13 +98,13 @@
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="3">
+                android:padding="5sp">
 
                 <TextView
                     android:text="Sim Operator Name:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="0"
+                    android:layout_column="2"
+                    android:layout_row="1"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -116,14 +116,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="0"/>
+                    android:layout_column="2"
+                    android:layout_row="1"/>
 
                 <TextView
                     android:text="Sim Country:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="1"
+                    android:layout_column="2"
+                    android:layout_row="2"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -135,14 +135,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="1"/>
+                    android:layout_column="2"
+                    android:layout_row="2"/>
 
                 <TextView
                     android:text="Sim Operator:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="2"
+                    android:layout_column="2"
+                    android:layout_row="3"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -154,14 +154,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="2"/>
+                    android:layout_column="2"
+                    android:layout_row="3"/>
 
                 <TextView
                     android:text="Sim S.N.:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="3"
+                    android:layout_column="2"
+                    android:layout_row="4"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -173,14 +173,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="3"/>
+                    android:layout_column="2"
+                    android:layout_row="4"/>
 
                 <TextView
                     android:text="Sim State:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="4"
+                    android:layout_column="2"
+                    android:layout_row="5"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -192,14 +192,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="4"/>
+                    android:layout_column="2"
+                    android:layout_row="5"/>
 
                 <TextView
                     android:text="Subscriber id:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="5"
+                    android:layout_column="2"
+                    android:layout_row="6"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -211,14 +211,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="5"/>
+                    android:layout_column="2"
+                    android:layout_row="6"/>
 
                 <TextView
                     android:text="Mail Alpha Tag:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="6"
+                    android:layout_column="2"
+                    android:layout_row="7"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -230,14 +230,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="6"/>
+                    android:layout_column="2"
+                    android:layout_row="7"/>
 
                 <TextView
                     android:text="Mail Number:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="7"
+                    android:layout_column="2"
+                    android:layout_row="8"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -249,14 +249,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="7"/>
+                    android:layout_column="2"
+                    android:layout_row="8"/>
 
                 <TextView
                     android:text="ICC Card:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="8"
+                    android:layout_column="2"
+                    android:layout_row="9"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -268,14 +268,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="8"/>
+                    android:layout_column="2"
+                    android:layout_row="9"/>
 
                 <TextView
                     android:text="Network Roaming:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="9"
+                    android:layout_column="2"
+                    android:layout_row="10"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -287,14 +287,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="9"/>
+                    android:layout_column="2"
+                    android:layout_row="10"/>
 
                 <TextView
                     android:text="Network Operator Name:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="10"
+                    android:layout_column="2"
+                    android:layout_row="11"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -306,14 +306,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="10"/>
+                    android:layout_column="2"
+                    android:layout_row="11"/>
 
                 <TextView
                     android:text="Network Country:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="11"
+                    android:layout_column="2"
+                    android:layout_row="12"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -325,14 +325,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="11"/>
+                    android:layout_column="2"
+                    android:layout_row="12"/>
 
                 <TextView
                     android:text="Network Operator:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="12"
+                    android:layout_column="2"
+                    android:layout_row="13"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -344,14 +344,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="12"/>
+                    android:layout_column="2"
+                    android:layout_row="13"/>
 
                 <TextView
                     android:text="Phone Type:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="13"
+                    android:layout_column="2"
+                    android:layout_row="14"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -363,14 +363,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="13"/>
+                    android:layout_column="2"
+                    android:layout_row="14"/>
 
                 <TextView
                     android:text="GSM Cell ID:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="14"
+                    android:layout_column="2"
+                    android:layout_row="15"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -382,14 +382,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="14"/>
+                    android:layout_column="2"
+                    android:layout_row="15"/>
 
                 <TextView
                     android:text="GSM Location Area Code:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="15"
+                    android:layout_column="2"
+                    android:layout_row="16"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -401,14 +401,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="15"/>
+                    android:layout_column="2"
+                    android:layout_row="16"/>
 
                 <TextView
                     android:text="Call State:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="16"
+                    android:layout_column="2"
+                    android:layout_row="17"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -420,14 +420,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="16"/>
+                    android:layout_column="2"
+                    android:layout_row="17"/>
 
                 <TextView
                     android:text="Line One Number:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="17"
+                    android:layout_column="2"
+                    android:layout_row="18"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -439,14 +439,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="17"/>
+                    android:layout_column="2"
+                    android:layout_row="18"/>
 
                 <TextView
                     android:text="Device ID:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="18"
+                    android:layout_column="2"
+                    android:layout_row="19"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -458,14 +458,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="18"/>
+                    android:layout_column="2"
+                    android:layout_row="19"/>
 
                 <TextView
                     android:text="Software Version:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="19"
+                    android:layout_column="2"
+                    android:layout_row="20"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -477,14 +477,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="19"/>
+                    android:layout_column="2"
+                    android:layout_row="20"/>
 
                 <TextView
                     android:text="Data Activity:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="20"
+                    android:layout_column="2"
+                    android:layout_row="21"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -496,14 +496,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="20"/>
+                    android:layout_column="2"
+                    android:layout_row="21"/>
 
                 <TextView
                     android:text="Data State:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="21"
+                    android:layout_column="2"
+                    android:layout_row="22"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -515,14 +515,14 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="21"/>
+                    android:layout_column="2"
+                    android:layout_row="22"/>
 
                 <TextView
                     android:text="Network Type:"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:layout_column="0"
-                    android:layout_row="22"
+                    android:layout_column="2"
+                    android:layout_row="23"
                     android:padding="3sp"
                     android:layout_columnWeight="1"/>
 
@@ -534,8 +534,8 @@
                     android:fontFamily="sans-serif-smallcaps"
                     android:gravity="center"
                     android:layout_columnWeight="1"
-                    android:layout_column="1"
-                    android:layout_row="22"/>
+                    android:layout_column="2"
+                    android:layout_row="23"/>
 
             </GridLayout>
 
