--- a/app/src/main/res/layout/activity_gsm.xml
+++ b/app/src/main/res/layout/activity_gsm.xml
@@ -72,6 +72,7 @@
                 android:layout_height="match_parent"
                 android:elevation="@dimen/app_bar_elevation"
                 android:textSize="15sp"
+                android:gravity="center"
                 android:fontFamily="sans-serif-smallcaps"
                 android:layout_gravity="center"
                 android:textStyle="bold"
