--- a/app/src/main/res/layout/activity_magnetic.xml
+++ b/app/src/main/res/layout/activity_magnetic.xml
@@ -112,7 +112,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Magnetic Field (X):"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -122,7 +122,7 @@
                         android:layout_row="0"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -132,7 +132,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Magnetic Field (Y):"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -142,7 +142,7 @@
                         android:layout_row="1"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -153,7 +153,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Magnetic Field (Z):"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -163,7 +163,7 @@
                         android:layout_row="2"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -174,7 +174,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Vendor:"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -184,7 +184,7 @@
                         android:layout_row="3"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -194,7 +194,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Resolution:"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -204,7 +204,7 @@
                         android:layout_row="4"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -214,7 +214,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Maximum Range:"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -224,7 +224,7 @@
                         android:layout_row="5"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -234,7 +234,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Power:"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -244,7 +244,7 @@
                         android:layout_row="6"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -254,7 +254,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Present:"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -264,7 +264,7 @@
                         android:layout_row="7"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -274,7 +274,7 @@
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
                         android:text="Calibrator:"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
@@ -284,7 +284,7 @@
                         android:layout_row="8"
                         android:fontFamily="sans-serif-smallcaps"
                         android:padding="5sp"
-                        android:textColor="#000"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="14sp"
                         android:textStyle="bold" />
                 </GridLayout>
@@ -292,8 +292,6 @@
             </LinearLayout>
 
         </ScrollView>
-
-
 
     </android.support.v7.widget.CardView>
 
