--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -93,11 +93,11 @@ android:layout_height="match_parent">
     app:cardBackgroundColor="@color/colorPrimaryDark">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".view.rishabh.CompassActivity">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <ImageView
             android:id="@+id/main_image_dial"
