--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -50,6 +50,7 @@ android:layout_height="match_parent">
         <ImageView
             android:id="@+id/imageView"
             android:padding="10sp"
+            android:src="@drawable/compass"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
